--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
       ".gitignore": true,
       "package.json": true,
       "package-lock.json": true,
-      "public": true
+      "public": false
     }
   }
   
